--- a/contact.html
+++ b/contact.html
@@ -38,20 +38,20 @@
       <section class="form">
         <form>
           <div>
-            <label for="name">姓名</label>
-            <input type="text" name="name" />
+            <label for="name">姓名
+            <input type="text" name="name" /></label>
           </div>
           <div>
-            <label for="email">信箱</label>
-            <input type="email" name="email" />
+            <label for="email">信箱
+            <input type="email" name="email" /></label>
           </div>
           <div>
-            <label for="phone">電話</label>
-            <input type="text" name="phone" />
+            <label for="phone">電話
+            <input type="text" name="phone" /></label>
           </div>
           <div>
-            <label for="need">內容</label>
-            <textarea name="need" id="need" rows="10"></textarea>
+            <label for="need">內容
+            <textarea name="need" id="need" rows="10"></textarea></label>
           </div>
           <button type="submit">提交表單</button>
         </form>
