--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="./index.html">首頁</a></li>
+          <li><a href="./index2.html">首頁</a></li>
           <li><a href="resume.html">我的履歷</a></li>
           <li><a class="active" href="contact.html">聯絡方式</a></li>
           <li>
