--- a/index2.html
+++ b/index2.html
@@ -253,7 +253,7 @@
     <header>
       <nav>
         <ul>
-          <li><a class="active" href="./index.html">首頁</a></li>
+          <li><a class="active" href="./index2.html">首頁</a></li>
           <li><a href="resume.html">我的履歷</a></li>
           <li><a href="contact.html">聯絡方式</a></li>
           <li>
