--- a/index2.html
+++ b/index2.html
@@ -289,22 +289,22 @@
       </section>
     </main>
     <footer>
-      <a href="#"
-        ><img src="./ICONS/facebook.svg" alt="facebook" title="facebook page"
-      /></a>
-      <a href="#"
-        ><img
-          src="./ICONS/instagram.svg"
-          alt="instagram"
-          title="instagram page"
-      /></a>
-      <a href="#"
-        ><img
-          src="./ICONS/github-brands 1.svg"
-          alt="github"
-          title="github page"
-      /></a>
-    </footer>
+        <a href="https://www.facebook.com/profile.php?id=100003146452969" target="_blank"
+          ><img src="./ICONS/facebook.svg" alt="facebook" title="facebook page"
+        /></a>
+        <a href="https://www.instagram.com/shimin.1998/" target="_blank"
+          ><img
+            src="./ICONS/instagram.svg"
+            alt="instagram"
+            title="instagram page"
+        /></a>
+        <a href="https://github.com/JasonWei326" target="_blank"
+          ><img
+            src="./ICONS/github-brands 1.svg"
+            alt="github"
+            title="github page"
+        /></a>
+      </footer>
   </body>
   <script src="./app.js"></script>
 </html>
