--- a/index2.html
+++ b/index2.html
@@ -266,6 +266,11 @@
               >Hawaii Project</a
             >
           </li>
+          <li>
+            <a href="./sideProject/todo/index.html" target="_blank"
+              >todo list</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
@@ -289,22 +294,24 @@
       </section>
     </main>
     <footer>
-        <a href="https://www.facebook.com/profile.php?id=100003146452969" target="_blank"
-          ><img src="./ICONS/facebook.svg" alt="facebook" title="facebook page"
-        /></a>
-        <a href="https://www.instagram.com/shimin.1998/" target="_blank"
-          ><img
-            src="./ICONS/instagram.svg"
-            alt="instagram"
-            title="instagram page"
-        /></a>
-        <a href="https://github.com/JasonWei326" target="_blank"
-          ><img
-            src="./ICONS/github-brands 1.svg"
-            alt="github"
-            title="github page"
-        /></a>
-      </footer>
+      <a
+        href="https://www.facebook.com/profile.php?id=100003146452969"
+        target="_blank"
+        ><img src="./ICONS/facebook.svg" alt="facebook" title="facebook page"
+      /></a>
+      <a href="https://www.instagram.com/shimin.1998/" target="_blank"
+        ><img
+          src="./ICONS/instagram.svg"
+          alt="instagram"
+          title="instagram page"
+      /></a>
+      <a href="https://github.com/JasonWei326" target="_blank"
+        ><img
+          src="./ICONS/github-brands 1.svg"
+          alt="github"
+          title="github page"
+      /></a>
+    </footer>
   </body>
   <script src="./app.js"></script>
 </html>
