--- a/sideProject/Taiwan Project/author.html
+++ b/sideProject/Taiwan Project/author.html
@@ -56,15 +56,14 @@
       </ul>
     </nav>
     <!--主要內容-->
-    <section class="container">
+    <!-- <section class="container">
       <section class="left">
         <img src="./twicon/ME.jpg" alt="" class="mypicture" />
       </section>
       <section class="right">
         <h3>中文簡介</h3>
         <hr />
-        <p>我是一位網頁前端網頁的人,此頁我未來會作為練習用,此為秘密基地。</p>
       </section>
-    </section>
+    </section> -->
   </body>
 </html>
