todolist add connect

--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,11 @@
               >Hawaii Project</a
             >
           </li>
+          <li>
+            <a href="./sideProject/todo/index.html" target="_blank"
+              >todo list</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
@@ -38,20 +43,18 @@
       <section class="form">
         <form>
           <div>
-            <label for="name">姓名
-            <input type="text" name="name" /></label>
+            <label for="name">姓名 <input type="text" name="name" /></label>
           </div>
           <div>
-            <label for="email">信箱
-            <input type="email" name="email" /></label>
+            <label for="email">信箱 <input type="email" name="email" /></label>
           </div>
           <div>
-            <label for="phone">電話
-            <input type="text" name="phone" /></label>
+            <label for="phone">電話 <input type="text" name="phone" /></label>
           </div>
           <div>
-            <label for="need">內容
-            <textarea name="need" id="need" rows="10"></textarea></label>
+            <label for="need"
+              >內容 <textarea name="need" id="need" rows="10"></textarea>
+            </label>
           </div>
           <button type="submit">提交表單</button>
         </form>
@@ -67,7 +70,9 @@
       </section>
     </main>
     <footer>
-      <a href="https://www.facebook.com/profile.php?id=100003146452969" target="_blank"
+      <a
+        href="https://www.facebook.com/profile.php?id=100003146452969"
+        target="_blank"
         ><img src="./ICONS/facebook.svg" alt="facebook" title="facebook page"
       /></a>
       <a href="https://www.instagram.com/shimin.1998/" target="_blank"
