--- a/index.html
+++ b/index.html
@@ -266,6 +266,11 @@
               >Hawaii Project</a
             >
           </li>
+          <li>
+            <a href="./sideProject/todo/index.html" target="_blank"
+              >todo list</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
@@ -289,7 +294,9 @@
       </section>
     </main>
     <footer>
-      <a href="https://www.facebook.com/profile.php?id=100003146452969" target="_blank"
+      <a
+        href="https://www.facebook.com/profile.php?id=100003146452969"
+        target="_blank"
         ><img src="./ICONS/facebook.svg" alt="facebook" title="facebook page"
       /></a>
       <a href="https://www.instagram.com/shimin.1998/" target="_blank"
